# xtreme-grep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  PERFORMANCE_ANALYSIS.md  README.md
benches/: large_file_focus.rs  performance.rs  single_file_analysis.rs  small_file_overhead.rs
project/: README.md
src/: colorizer.rs  colors.rs  crawler.rs  file_reader.rs  highlighter.rs  lib.rs  main.rs  output.rs  result.rs  search.rs  search_sync.rs  search_xtreme.rs
src/output/: colors.rs  highlighter.rs  mod.rs  result.rs
src/search/: crawler.rs  default.rs  mod.rs  xtreme.rs
tests/: integration_tests.rs
