[package]
name = "xerg"
version = "0.2.0"
edition = "2024"
authors = ["yinkam <5328632+yinkam@users.noreply.github.com>"]
description = "Ultra-fast grep implementation in Rust - built for maximum speed with direct output and parallel processing"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yinkam/xtreme-grep"
repository = "https://github.com/yinkam/xtreme-grep"
keywords = ["grep", "search", "fast", "parallel", "cli"]
categories = ["command-line-utilities", "text-processing"]
documentation = "https://docs.rs/xerg"

[[bin]]
name = "xerg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", default-features = false, features = ["derive", "std", "help", "usage"]  }
num_cpus = "1.17.0"
rayon = "1.11.0"
regex = { version = "1.12.2", default-features = false, features = ["std", "perf", "unicode-perl"] }
walkdir = "2.5.0"

[dev-dependencies]
tempdir = "0.3.7"
regex = "1.12.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
